--- a/lesson9/fishHaven.html
+++ b/lesson9/fishHaven.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Miriam Aguirre">
 
 <!-- This start file was build by Miriam Aguirre  -->
-<title>Wind Chill Factor: Storm Center</title>
+<title>Wind Chill Factor: HOME</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -25,14 +25,7 @@
 <!-- fonts -->
 <!--<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">-->
-<link rel="icon" href="/lesson8/images/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#ffc40d">
-<meta name="theme-color" content="#ffffff">     
+<link rel="icon" href="/lesson4/images/favicon.ico" type="image/x-icon">     
 <script src="js/responsiveMenu.js" defer></script>
 
 </head>
@@ -51,11 +44,11 @@
     <nav class="clearfix">
         <button onclick="toggleMenu()">&#9776;</button>
         <ul class="hide" id="primaryNav">
-            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Heaven</a></li>            
-            <li class="active"><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
@@ -63,16 +56,7 @@
     
 <!-- CONTENT HERE -->
     <main>
-       <div class="thanks">
-        <h2>Thank you for filling out the form! </h2>
-        <p>At Wind Chill Factor we are always appreciative of our users' input. 
-            Here is a photo of a friendly dog smiling at you!</p>
-        <figure>
-            <img src="images/thanksdog.jpg" alt="Happy dog">
 
-            <figcaption>Photo by Marliese Streefland on Unsplash</figcaption>
-        </figure>
-    </div>
     </main>
     
 <!-- FOOTER HERE -->
@@ -85,6 +69,6 @@
 </div> 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
-<script src="js/imagehandling.js"></script>
+<script src="js/home.js"></script>
 </body>
 </html>
