--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>Lesson 06: <a href="lesson6/preston.html">Responsive Images and Font</a></li>
         <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a> | <a href="lesson7/gallery.html">Gallery</a></li>
         <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Acme</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
-        <li>Lesson 09: <a href="lesson9/prophets.html">Prophets cards</a></li>
+        <li>Lesson 09: <a href="lesson9/prophets.html">Prophets cards</a> | <a href="lesson9/index.html">Homepage Json</a></li>
       </ul>
     </article>
     <footer>
