--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li>Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading</a> | <a href="lesson7/gallery.html">Gallery</a></li>
         <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Acme</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophets cards</a> | <a href="lesson9/index.html">Homepage Json</a></li>
+        <li>Lesson 10: <a href="lesson10/api-test.html">API Test</a> | <a href="lesson10/preston.html">Preston</a></li>
       </ul>
     </article>
     <footer>
