--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -64,7 +64,7 @@
         </section>
         <div class="clearfix">
             
-            <h2>Article</h2>
+            <h2>Important Weather News</h2>
             <img  class="smallImgTxt" src="images/yellowflowers.jpg" alt="preston small photo">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
