--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -46,8 +46,8 @@
         <ul class="hide" id="primaryNav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Heaven</a></li>            
+            <li><a href="sodaSprings.html">Soda Springs</a></li>
+            <li><a href="fishHaven.html">Fish Heaven</a></li>            
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
