missing span tag

--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -73,7 +73,7 @@
             <p>Temperature: <span id="current">00</span>&deg;</p> 
             <p>Humidity: <span id="humidity">00</span>%</p>
             <p>Wind Speed: <span id="windSpeed">00</span>mph</p>
-            <p>Wind Chill: <span id="chill">message</p>
+            <p>Wind Chill: <span id="chill">message</span></p>
         </section>
         </div>
 
