--- a/lesson10/sodaSprings.html
+++ b/lesson10/sodaSprings.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Miriam Aguirre">
 
 <!-- This start file was build by Miriam Aguirre  -->
-<title>Wind Chill Factor: HOME</title>
+<title>Wind Chill Factor: Soda Springs</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -73,7 +73,7 @@
         <p>Temperature: <span id="current">00</span>&deg;</p> 
         <p>Humidity: <span id="humidity">00</span>%</p>
         <p>Wind Speed: <span id="windSpeed">00</span>mph</p>
-        <p>Wind Chill: <span id="chill">message</p>
+        <p>Wind Chill: <span id="chill">message</span></p>
     </section>
     </div>
 
