new hero images

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -46,8 +46,8 @@
         <ul class="hide" id="primaryNav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Heaven</a></li>            
+            <li><a href="sodaSprings.html">Soda Springs</a></li>
+            <li><a href="fishHaven.html">Fish Haven</a></li>            
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -103,7 +103,7 @@
         &#9729;  &copy; 2020  | Miriam Aguirre | <a href="#">Terms of Use</a> | wcf@mail.com | 555-555-555 &#9729;
         <p><script src="js/todaydate.js"></script></p>  
     </footer>
-    <script src="js/saturdaymsg.js"></script>
+  
 </div> 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
