--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -47,7 +47,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="preston.html">Preston</a></li>
             <li><a href="sodaSprings.html">Soda Springs</a></li>
-            <li><a href="fishHaven.html">Fish Heaven</a></li>            
+            <li><a href="fishHaven.html">Fish Haven</a></li>            
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -64,12 +64,12 @@
                 <source media="(max-width: 350px)" srcset="images/preston_small_350.jpg">
                 <source media="(max-width: 700px)" srcset="images/preston_medium_700.jpg">
                 <source media="(max-width: 900px)" srcset="images/preston_large_900.jpg">
-                <img src="images/franklin_893.jpg" alt="hero photo practice"> 
+                <img src="images/family_893.jpg" alt="hero photo practice"> 
                 </picture>
             <section class="weathersummary">
             <h3><span class="bottom">Weather summary</span></h3>
             <p>Condition: <span id="weather">xx</span>
-            <img src="https://openweathermap.org/img/w/" alt="image" id="icon"></p>
+            <img src="https://openweathermap.org/img/w/" alt="small preview currenty weather summary" id="icon"></p>
             <p>Temperature: <span id="current">00</span>&deg;</p> 
             <p>Humidity: <span id="humidity">00</span>%</p>
             <p>Wind Speed: <span id="windSpeed">00</span>mph</p>
