--- a/lesson10/stormcenter.html
+++ b/lesson10/stormcenter.html
@@ -47,8 +47,8 @@
         <ul class="hide" id="primaryNav">
             <li><a href="index.html">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Heaven</a></li>            
+            <li><a href="sodaSpring.html">Soda Springs</a></li>
+            <li><a href="fishHaven.html">Fish Haven</a></li>            
             <li class="active"><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
