--- a/lesson10/fishHaven.html
+++ b/lesson10/fishHaven.html
@@ -47,7 +47,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
             <li><a href="sodaSprings.html">Soda Springs</a></li>
-            <li class="active"><a href="fishHaven.html">Fish Heaven</a></li>            
+            <li class="active"><a href="fishHaven.html">Fish Haven</a></li>            
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -64,7 +64,7 @@
             <source media="(max-width: 350px)" srcset="images/preston_small_350.jpg">
             <source media="(max-width: 700px)" srcset="images/preston_medium_700.jpg">
             <source media="(max-width: 900px)" srcset="images/preston_large_900.jpg">
-            <img src="images/franklin_893.jpg" alt="hero photo practice"> 
+            <img src="images/fish_893.jpg" alt="hero photo"> 
             </picture>
         <section class="weathersummary">
         <h3><span class="bottom">Weather summary</span></h3>
@@ -90,7 +90,7 @@
     <div class="clearfix">
         
         <h2>Article</h2>
-        <img  class="smallImgTxt" src="images/yellowflowers.jpg" alt="preston small photo">
+        <img  class="smallImgTxt" src="images/flower.jpg" alt="fish small photo">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
