--- a/lesson10/sodaSprings.html
+++ b/lesson10/sodaSprings.html
@@ -47,7 +47,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
             <li class="active"><a href="sodaSprings.html">Soda Springs</a></li>
-            <li><a href="fishHaven.html">Fish Heaven</a></li>            
+            <li><a href="fishHaven.html">Fish Haven</a></li>            
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -64,7 +64,7 @@
             <source media="(max-width: 350px)" srcset="images/preston_small_350.jpg">
             <source media="(max-width: 700px)" srcset="images/preston_medium_700.jpg">
             <source media="(max-width: 900px)" srcset="images/preston_large_900.jpg">
-            <img src="images/franklin_893.jpg" alt="hero photo practice"> 
+            <img src="images/spring_893.jpg" alt="hero photo"> 
             </picture>
         <section class="weathersummary">
         <h3><span class="bottom">Weather summary</span></h3>
@@ -90,7 +90,7 @@
     <div class="clearfix">
         
         <h2>Article</h2>
-        <img  class="smallImgTxt" src="images/yellowflowers.jpg" alt="preston small photo">
+        <img class="smallImgTxt2" src="images/puppy.jpg" alt="small photo">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -104,7 +104,8 @@
             An commune pericula quo. Vix elit minimum an, ei case adhuc epicurei eum. Eruditi corpora
              quaestio te duo, vis tractatos sententiae et. Sed scaevola incorrupte argumentum cu. Sit 
              ea utamur debitis molestiae, integre denique et cum. Exerci voluptatibus per et, quo mutat 
-             ullum ut, id viris salutandi per. Vel novum menandri omittantur ei, his atqui debet no.</p> 
+             ullum ut, id viris salutandi per. Vel novum menandri omittantur ei, his atqui debet no. 
+             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p> 
     </div>
 
     <div class="clearfix">
