sodasprings and fishhaven new js

--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -69,7 +69,7 @@
             <section class="weathersummary">
             <h3><span class="bottom">Weather summary</span></h3>
             <p>Condition: <span id="weather">xx</span>
-            <img src="https://openweathermap.org/img/w/" alt="small preview currenty weather summary" id="icon"></p>
+            <img src="https://openweathermap.org/img/w/" alt="small preview currently weather summary" id="icon"></p>
             <p>Temperature: <span id="current">00</span>&deg;</p> 
             <p>Humidity: <span id="humidity">00</span>%</p>
             <p>Wind Speed: <span id="windSpeed">00</span>mph</p>
@@ -80,7 +80,7 @@
 
         <h2 class="hidden" id="townName">Five Day Forecast</h2>
      
-        <section id="forecast" >
+        <section id="forecast">
             <!---<div>
                 <h3>Monday</h3>
                 <img src="images/sunny.png" alt="forecastimg1">
