images new sizes

--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -61,9 +61,9 @@
         
         <div class="herodiv">
             <picture class="franklin">     
-                <source media="(max-width: 350px)" srcset="images/preston_small_350.jpg">
-                <source media="(max-width: 700px)" srcset="images/preston_medium_700.jpg">
-                <source media="(max-width: 900px)" srcset="images/preston_large_900.jpg">
+                <source media="(max-width: 350px)" srcset="images/p_small_350.jpg">
+                <source media="(max-width: 700px)" srcset="images/p_medium_700.jpg">
+                <source media="(max-width: 900px)" srcset="images/p_large_900.jpg">
                 <img src="images/family_893.jpg" alt="hero photo practice"> 
                 </picture>
             <section class="weathersummary">
