--- a/lesson10/sodaSprings.html
+++ b/lesson10/sodaSprings.html
@@ -61,9 +61,9 @@
     
     <div class="herodiv">
         <picture class="franklin">     
-            <source media="(max-width: 350px)" srcset="images/preston_small_350.jpg">
-            <source media="(max-width: 700px)" srcset="images/preston_medium_700.jpg">
-            <source media="(max-width: 900px)" srcset="images/preston_large_900.jpg">
+            <source media="(max-width: 350px)" srcset="images/spring_small_350.jpg">
+            <source media="(max-width: 700px)" srcset="images/spring_medium_700.jpg">
+            <source media="(max-width: 900px)" srcset="images/spring_large_900.jpg">
             <img src="images/spring_893.jpg" alt="hero photo"> 
             </picture>
         <section class="weathersummary">
