--- a/final-lesson11/preston.html
+++ b/final-lesson11/preston.html
@@ -80,8 +80,42 @@
 
         <h2 class="hidden" id="townName">Five Day Forecast</h2>
      
-        <section id="forecast"></section>
- 
+        <section id="forecast">
+            <!---<div>
+                <h3>Monday</h3>
+                <img src="images/sunny.png" alt="forecastimg1">
+                <p>High Temp 44&deg;</p>
+            </div>
+            <div>
+                <h3>Tuesday</h3>
+                <img src="images/almostsunny.png" alt="forecastimg2">
+                <p>High Temp 43&deg;</p>
+            </div>
+            <div>
+                <h3>Wednesday</h3>
+                <img src="images/rain.png" alt="forecastimg3">
+                <p>High Temp 42&deg;</p>
+            </div>
+            <div>
+                <h3>Thursday</h3>
+                <img src="images/thunder.png" alt="forecastimg4">
+                <p>High Temp 41&deg;</p>
+            </div>
+            <div>
+                <h3>Friday</h3>
+                <img src="images/snow.png" alt="forecastimg5">
+                <p>High Temp 40&deg;</p>
+            </div>-->    
+
+        </section>
+        <section class="calendar">
+			<h3>Upcoming Events:</h3>
+			<hr>
+			<div class="events"></div>
+		</section>
+
+
+
         <div class="clearfix">
             
             <h2>Article</h2>
@@ -129,7 +163,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
 <script src="js/prestonWeather.js"></script>
-
+<script src="js/prestonCalendar.js"></script>
 
 </body>
 </html>
