--- a/final-lesson11/fishHaven.html
+++ b/final-lesson11/fishHaven.html
@@ -81,7 +81,11 @@
     <h2 class="hidden" id="townName">Five Day Forecast</h2>
  
     <section id="forecast" ></section>
-
+    <section class="calendar">
+        <h3>Upcoming Events:</h3>
+        <hr>
+        <div class="events"></div>
+    </section>
 
 
     <div class="clearfix">
@@ -131,6 +135,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
 <script src="js/fishHaven.js"></script>
-
+<script src="js/fishCalendar.js"></script>
 </body>
 </html>
