--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -25,7 +25,7 @@
 <!-- fonts -->
 <!--<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">-->
-<link rel="icon" href="/lesson8/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
