--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -130,7 +130,7 @@
                     
                 </section>    
                 <small>Sources: Kids Encyclopedia <a href ="https://kids.kiddle.co/Preston,_Idaho"> Preston Facts,</a></small>
-                <small>Preston Chamber of Commerce <a href ="https://kids.kiddle.co/Preston,_Idaho"> Preston History</a></small>
+                <small>Preston Chamber of Commerce <a href ="https://prestonchamber.org/community/preston-history/"> Preston History</a></small>
         </div>
 
         <div class="clearfix">
