--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -109,7 +109,7 @@
                 located several blocks from U.S. Highway 91. Several area landmarks can be seen throughout the film. 
                 Preston is the home of the film's creators, Jared and Jerusha Hess; Jared attended high school in Preston.</p>
 
-                <label for="show"><section class="readMore">Read More</section></label>
+                <label for="show"><span class="readMore">Read More</span></label>
                 <input type=radio id="show">
                 <section id="content">                  
 
@@ -128,10 +128,12 @@
 
                     It is one of the safest places to live in the State of Idaho and in Cache Valley. </p>   
                     
-                </section>    
+                </section> 
+                <p>  
                 <small>Sources: Kids Encyclopedia <a href ="https://kids.kiddle.co/Preston,_Idaho"> Preston Facts,</a></small>
                 <small>Preston Chamber of Commerce <a href ="https://prestonchamber.org/community/preston-history/"> Preston History</a></small>
-        </div>
+                </p>     
+            </div>
 
         <div class="clearfix">
             <h2>Contact Us</h2>
