reducing image size

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -74,8 +74,12 @@
                 southwest and central Idaho, as well as, much of eastern Oregon. These storms will produce lightning, small hail, 
                 and gusty winds around them.In the mountains, light snowfall amounts are expected with some snow showers lingering 
                 into Wednesday. Beyond today's weather, drier weather will move in afterward and near seasonal temperatures.</p> 
-                <small>Sorces: Idaho News <a href ="https://idahonews.com/weather/adventure-starts-with-weather/showers-and-possible-thunderstorms-in-for-forecast-for-idaho">Weather Forecast for St. Patrick's Day</a></small>
-        
+                <p class="small">Sorces: Idaho News <a href ="https://idahonews.com/weather/adventure-starts-with-weather/showers-and-possible-thunderstorms-in-for-forecast-for-idaho">Weather Forecast for St. Patrick's Day</a></small></p>
+                
+                <label for="show"><span class="readMore">Read More</span></label>
+                <input type=radio id="show">
+                <section id="content">   
+
             <h2>Interesting Idaho Facts</h2>
             <h3>Gem State indeed!</h3>
             <p>With over 72 varieties of rare and precious gems and minerals, rock hounds the world over are drawn to Idaho’s untamed treasure trove. Included among these stones is the Star Garnet, only found in 
@@ -91,8 +95,8 @@
                 Culling native Idahoan resources, Miss Green included a miner, lady justice (complete with scales of freedom), an elk head, 
                 a fir tree, cornucopias and other uniquely Idahoan features. Tempered with the phrase, “Esto Perpetua” (may it endure forever), 
                 she was able to capture the heart and essence of the Gem State. </p>    
-                <small>Sorces: Best Things Idaho <a href ="https://bestthingsid.com/fun-facts/">Fun Facts About Idaho</a></small>
-   
+                <p class="small">Sorces: Best Things Idaho <a href ="https://bestthingsid.com/fun-facts/">Fun Facts About Idaho</a></small></p>
+                </section>
         </div>
 
         <div class="clearfix">
