--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -129,10 +129,8 @@
                     It is one of the safest places to live in the State of Idaho and in Cache Valley. </p>   
                     
                 </section> 
-                <p>  
-                <small>Sources: Kids Encyclopedia <a href ="https://kids.kiddle.co/Preston,_Idaho"> Preston Facts,</a></small>
-                <small>Preston Chamber of Commerce <a href ="https://prestonchamber.org/community/preston-history/"> Preston History</a></small>
-                </p>     
+                <p class="small">Sources: Kids Encyclopedia <a href ="https://kids.kiddle.co/Preston,_Idaho"> Preston Facts,</a>
+                Preston Chamber of Commerce <a href ="https://prestonchamber.org/community/preston-history/"> Preston History</a></p>    
             </div>
 
         <div class="clearfix">
