--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -105,7 +105,7 @@
             gas mixing with water in an underground chamber, caused water to shoot 100 feet into the sky. It is 
             now capped and controlled by a timer and erupts every hour on the hour. It is the only captive geyser in the world.</p>
        
-        <label for="show"><section class="readMore">Read More</section></label>
+        <label for="show"><span class="readMore">Read More</span></label>
         <input type=radio id="show">
         <section id="content">            
 
@@ -132,9 +132,9 @@
             </p>
         </section>    
 
-            <small>Sources: Kids Encyclopedia <a href ="https://kids.kiddle.co/Soda_Springs,_Idaho"> Soda Springs Facts,</a></small>
-            <small> Soda Springs <a href ="https://www.sodaspringsid.com/recreation/index.php"> Recreation Activities,</a></small>
-            <small> Idaho Forests <a href ="https://www.fs.usda.gov/recmain/ctnf/recreation"> Caribou-Targhee National Forest</a></small>
+            <p class="small">Sources: Kids Encyclopedia <a href ="https://kids.kiddle.co/Soda_Springs,_Idaho"> Soda Springs Facts,</a>
+            Soda Springs <a href ="https://www.sodaspringsid.com/recreation/index.php"> Recreation Activities,</a>
+            Idaho Forests <a href ="https://www.fs.usda.gov/recmain/ctnf/recreation"> Caribou-Targhee National Forest</a></p>
     </div>
 
     <div class="clearfix">
