erase small tag

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -95,7 +95,7 @@
                 Culling native Idahoan resources, Miss Green included a miner, lady justice (complete with scales of freedom), an elk head, 
                 a fir tree, cornucopias and other uniquely Idahoan features. Tempered with the phrase, “Esto Perpetua” (may it endure forever), 
                 she was able to capture the heart and essence of the Gem State. </p>    
-                <p class="small">Sorces: Best Things Idaho <a href ="https://bestthingsid.com/fun-facts/">Fun Facts About Idaho</a></small></p>
+                <p class="small">Sorces: Best Things Idaho <a href ="https://bestthingsid.com/fun-facts/">Fun Facts About Idaho</a></p>
                 </section>
         </div>
 
