--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Acme</a> | <a href="lesson8/stormcenter.html">Storm Center</a></li>
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophets cards</a> | <a href="lesson9/index.html">Homepage Json</a></li>
         <li>Lesson 10: <a href="lesson10/api-test.html">API Test</a> | <a href="lesson10/preston.html">Preston</a></li>
-        <li>Lesson 11: <a href="lesson11/index.html">Lesson 11</a> 
+        <li>Lesson 11: <a href="lesson11/index.html">Lesson 11 Final Weather Site</a> 
+        <li>Lesson 12: <a href="lesson12/index.html">Christmas Ranch Practice</a> 
       </ul>
     </article>
     <footer>
