--- a/canyonfishadventures/trips.html
+++ b/canyonfishadventures/trips.html
@@ -73,7 +73,7 @@
             July and August. Calm sections and deep pools perfect for relaxing, swimming, and simply absorbing the country's splendor.
             Enjoy sandy camping beaches backed up to pine forests and mountains.</p>
         <p>Begins and Ends: Salmon, Idaho & McCall, Idaho <br>Season: June-August<br> River Distance: 82 miles <br> Rapids: Class II-IV <br>Boat Type: Oar, Paddle, Kayak <br>Minimum Age: 6 (12 at high water)<br><strong>STARTING AT $995</strong></p>    
-        <img src="/images/trip1.jpg" alt="Salmon River Trip Main area">    
+        <img src="images/trip1.jpg" alt="Salmon River Trip Main area">    
         </div>
 
         <div><h2>6 day Middle Fork Salmon River Trip</h2>
@@ -82,7 +82,7 @@
             its 100 mile course through the remote and spectacular River of No Return Wilderness, the largest Wilderness in the lower 
             48 states.</p> 
         <p>Begins & Ends: Stanley, Idaho & Salmon, Idaho <br>Season: June-August<br>River Distance: 100 miles<br>Rapids: Class III-V<br>Boat Type: Oar Boat & Paddle Raft<br>Minimum Age: 7-12 (Based on water)<br><strong>STARTING AT $1990</strong></p>
-            <img src="/images/trip2.jpg" alt="Salmon River Trip Middle area">      
+            <img src="images/trip2.jpg" alt="Salmon River Trip Middle area">      
         </div>
 
         <div><h2>5 day Lower Salmon River Trip</h2>
@@ -90,7 +90,7 @@
             the final miles of the Salmon River before it joins the mighty Snake River on its way to the Columbia. On this section of river, 
             the trip covers 53 miles on the Salmon River plus another 21 miles on the Snake River. </p> 
        <p> Begins and Ends: Lewiston, Idaho<br>Season: July-September<br>River Distance: 89 miles<br>Rapids: Class II-III<br>Boat Type: Oar, Paddle, Inflatable Kayak<br>Minimum Age: 5 &10 (Based on water levels)<br><strong>STARTING AT $1495</strong></p>
-        <img src="/images/trip3.jpg" alt="Salmon River Trip Lower area">  
+        <img src="images/trip3.jpg" alt="Salmon River Trip Lower area">  
         </div>
 
 </div>    
