--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -25,7 +25,7 @@
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon" alt="logo">     
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">     
 <script src="js/responsiveMenu.js" defer></script>
 
 </head>
