--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -60,7 +60,7 @@
 
 
         <div class="slider">
-            <img src="images/river-wide.jpeg" alt="hero image river wide">
+            <img src="images/riverwide.jpeg" alt="hero image river wide">
             <img src="images/littlecolorado.jpg" alt="little colorado river">
             <img src="images/salmon-kayak.jpg" alt="salmon kayak">
         </div>
