--- a/canyonfishadventures/thanks.html
+++ b/canyonfishadventures/thanks.html
@@ -61,7 +61,7 @@
             <p>Our representatives will contact you as soon as possible.</p></div>
 
         <div class="thankYou"><p>Bighorn Sheep are large mammals that are relatives of goats.<br>Females are called "ewes" and males are called "rams".</p>
-        <img src="images/bighorn-ram.jpg"> </div>
+        <img src="images/bighorn-ram.jpg" alt="big horn ram photo"> </div>
 
      
     </main>
