--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -72,7 +72,7 @@
             </div>
 
             <div class="main"> <a href="trips.html"><h2>See our packages</h2>
-            <p>Select the best package for you</p>
+            <p>Select the best package </p>
             <img src="images/white-draft.jpg" alt="white draft"></a>    
             </div>
             
