thank you updated

--- a/canyonfishadventures/thanks.html
+++ b/canyonfishadventures/thanks.html
@@ -59,8 +59,10 @@
 
         <div class="strong">
             <p>Our representatives will contact you as soon as possible.</p></div>
-
-        <div class="thankYou"><p>Bighorn Sheep are large mammals that are relatives of goats.<br>Females are called "ewes" and males are called "rams".</p>
+            
+        <div class="thankYou">
+            <h2>Did you know?</h2>
+            <p>Bighorn Sheep are large mammals that are relatives of goats.<br>Females are called "ewes" and males are called "rams".</p>
         <img src="images/bighorn-ram.jpg" alt="big horn ram photo"> </div>
 
      
