fix date and meta in index

--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -9,7 +9,7 @@
 <title>Canyon Fish Adventures: Home</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" user-scalabile="no">
 
 
 
@@ -95,11 +95,13 @@
 <!-- FOOTER HERE -->
 <div id="footerWrapper">  
     <footer>
-        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources | </a> <script src="js/todaydate.js"></script>  🐠
+        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources</a> | <span id="todayDate"></span>🐠
+  
     </footer>
 </div> 
 <script src="js/todayWeather.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
+<script src="js/todaydate.js"></script>
 </body>
 </html>
