today weather updated in js links

--- a/canyonfishadventures/reservations.html
+++ b/canyonfishadventures/reservations.html
@@ -110,11 +110,12 @@
 <!-- FOOTER HERE -->
 <div id="footerWrapper">  
     <footer>
-        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources | </a> <script src="js/todaydate.js"></script>  🐠
+        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources</a> | <span id="todayDate"></span>🐠
     </footer>
 </div> 
 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script src="js/webfontload.js"></script>
+<script src="js/todaydate.js"></script>
 </body>
 </html>
