--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -9,8 +9,8 @@
 <title>Canyon Fish Adventures: Home</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" user-scalabile="no">
-
+<!-- <meta name="viewport" user-scalabile="no" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 
