--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -95,8 +95,8 @@
 <!-- FOOTER HERE -->
 <div id="footerWrapper">  
     <footer>
-        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources</a> | <span id="todayDate"></span> 🐠
-  
+        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources</a> | <span id="todaydate"></span> 🐠
+      
     </footer>
 </div> 
 <script src="js/todayWeather.js"></script>
