length of descriptions fix

--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -67,12 +67,12 @@
         <div class="flex">
 
             <div class="main"><a href="contact.html"><h2>Contact us</h2>
-                <p>Contact form/ phone/ map</p>
+                <p>Contact & map</p>
                 <img src="images/elves-chasm.jpg" alt="elves charm"></a>
             </div>
 
-            <div class="main"> <a href="trips.html"><h2>See our packages</h2>
-            <p>Select the best package </p>
+            <div class="main"> <a href="trips.html"><h2>Packages</h2>
+            <p>Select a Trip</p>
             <img src="images/white-draft.jpg" alt="white draft"></a>    
             </div>
             
