--- a/canyonfishadventures/canyonfishadventures.html
+++ b/canyonfishadventures/canyonfishadventures.html
@@ -95,7 +95,7 @@
 <!-- FOOTER HERE -->
 <div id="footerWrapper">  
     <footer>
-        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources</a> | <span id="todaydate"></span> 🐠
+        &#128031;  &copy; 2020  | Miriam Aguirre | <a href="sources.html">Sources</a> | <span id="todayDate"></span> 🐠
       
     </footer>
 </div> 
