--- a/canyonfishadventures/trips.html
+++ b/canyonfishadventures/trips.html
@@ -55,7 +55,7 @@
     
 <!-- CONTENT HERE -->
     <main>
-        <h1>Plan your next trip!</h1>
+        <h1>Plan your next Salmon River trip!</h1>
         
         <div><h2>Salmon River Rafting</h2>
             <p>The Salmon River flows 425 miles, drains over 14,000 square miles and drops more than 7,000 vertical feet from 
@@ -68,28 +68,28 @@
             </div>
 
 <div class="trips">
-        <div><h2>5 day Main Salmon River Trip</h2>
+        <div><h2>5 day Main River Trip</h2>
         <p>Rich in scenic wonders and history, the Main Salmon River drops 1,200 feet in 89 miles. The blue-green waters, known as the "River of No Return," warm up to very comfortable temperatures in 
-            July and August. Calm sections and deep pools perfect for relaxing, swimming, and simply absorbing the country's splendor.
-            Enjoy sandy camping beaches backed up to pine forests and mountains.</p>
-        <p>Begins and Ends: Salmon, Idaho & McCall, Idaho <br>Season: June-August<br> River Distance: 82 miles <br> Rapids: Class II-IV <br>Boat Type: Oar, Paddle, Kayak <br>Minimum Age: 6 (12 at high water)<br><strong>STARTING AT $995</strong></p>    
+            July and August. Calm sections and deep pools perfect for relaxing, swimming, and simply absorbing the country's splendor. Our Main Salmon rafting trip will amaze you with white sand beaches and camping sites surrounded by towering Ponderosa Pines, flourishing wildflowers, and amazing wildlife viewing opportunities.
+            </p>
+        <p>Begins and Ends: Salmon, Idaho & McCall, Idaho <br>Season: June-August<br> River Distance: 82 miles <br> Rapids: Class II-IV <br>Boat Type: Oar, Paddle, Kayak and Inflatable raft <br>Minimum Age: 6 (12 at high water)<p class="strong">STARTING AT $995</p></p>    
         <img src="images/trip1.jpg" alt="Salmon River Trip Main area">    
         </div>
 
-        <div><h2>6 day Middle Fork Salmon River Trip</h2>
+        <div><h2>6 day Middle Fork Trip</h2>
         <p>Flowing untamed through a land so rugged that any attempts at settlement have failed, the Middle Fork of the Salmon River 
             is truly a legend among the whitewater rivers of the world. This pure, clear, free-flowing river drops 3,000 feet over 
             its 100 mile course through the remote and spectacular River of No Return Wilderness, the largest Wilderness in the lower 
-            48 states.</p> 
-        <p>Begins & Ends: Stanley, Idaho & Salmon, Idaho <br>Season: June-August<br>River Distance: 100 miles<br>Rapids: Class III-V<br>Boat Type: Oar Boat & Paddle Raft<br>Minimum Age: 7-12 (Based on water)<br><strong>STARTING AT $1990</strong></p>
+            48 states.We can create the perfect opportunity to relax in a raft or challenge the whitewater while paddling an inflatable kayak or stand up paddle board. </p> 
+        <p>Begins & Ends: Stanley, Idaho & Salmon, Idaho <br>Season: June-August<br>River Distance: 100 miles<br>Rapids: Class III-V<br>Boat Type: Oar Boat & Paddle Raft<br>Minimum Age: 7-12 (Based on water levels)<p><p class="strong">STARTING AT $1990</p></p>
             <img src="images/trip2.jpg" alt="Salmon River Trip Middle area">      
         </div>
 
-        <div><h2>5 day Lower Salmon River Trip</h2>
+        <div><h2>5 day Lower River Trip</h2>
         <p>Soak up rich scenic wonder and history while splashing toward huge sandy camping beaches. The Lower Salmon River trip explores 
             the final miles of the Salmon River before it joins the mighty Snake River on its way to the Columbia. On this section of river, 
-            the trip covers 53 miles on the Salmon River plus another 21 miles on the Snake River. </p> 
-       <p> Begins and Ends: Lewiston, Idaho<br>Season: July-September<br>River Distance: 89 miles<br>Rapids: Class II-III<br>Boat Type: Oar, Paddle, Inflatable Kayak<br>Minimum Age: 5 &10 (Based on water levels)<br><strong>STARTING AT $1495</strong></p>
+            the trip covers 53 miles on the Salmon River plus another 21 miles on the Snake River.  Experience a fun and exciting day with your friends and family with one of our knowledgeable guides.Enjoy sandy camping beaches backed up to pine forests and mountains.</p> 
+       <p> Begins and Ends: Lewiston, Idaho<br>Season: July-September<br>River Distance: 89 miles<br>Rapids: Class II-III<br>Boat Type: Oar, Paddle, Inflatable Kayak<br>Minimum Age: 5 &10 (Based on water levels)<p><p class="strong">STARTING AT $1495</p></p>
         <img src="images/trip3.jpg" alt="Salmon River Trip Lower area">  
         </div>
 
