fixed html errors and lose tags

--- a/canyonfishadventures/contact.html
+++ b/canyonfishadventures/contact.html
@@ -79,7 +79,7 @@
               <input type="text" id="lname" name="lastname" placeholder="Your last name.." required></label>
 
               <label for="email">Email* 
-             <input type="text" name="email" placeholder="myemail@gmail.com" required></label>
+              <input type="text" id="email" name="email" placeholder="myemail@gmail.com" required></label>
           
               <label for="subject">Type your message</label>
               <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
