--- a/canyonfishadventures/trips.html
+++ b/canyonfishadventures/trips.html
@@ -72,7 +72,8 @@
         <p>Rich in scenic wonders and history, the Main Salmon River drops 1,200 feet in 89 miles. The blue-green waters, known as the "River of No Return," warm up to very comfortable temperatures in 
             July and August. Calm sections and deep pools perfect for relaxing, swimming, and simply absorbing the country's splendor. Our Main Salmon rafting trip will amaze you with white sand beaches and camping sites surrounded by towering Ponderosa Pines, flourishing wildflowers, and amazing wildlife viewing opportunities.
             </p>
-        <p>Begins and Ends: Salmon, Idaho & McCall, Idaho <br>Season: June-August<br> River Distance: 82 miles <br> Rapids: Class II-IV <br>Boat Type: Oar, Paddle, Kayak and Inflatable raft <br>Minimum Age: 6 (12 at high water)<p class="strong">STARTING AT $995</p></p>    
+        <p>Begins and Ends: Salmon, Idaho & McCall, Idaho <br>Season: June-August<br> River Distance: 82 miles <br> Rapids: Class II-IV <br>Boat Type: Oar, Paddle, Kayak and Inflatable raft <br>Minimum Age: 6 (12 at high water)</p>
+        <p class="strong">STARTING AT $995</p>    
         <img src="images/trip1.jpg" alt="Salmon River Trip Main area">    
         </div>
 
@@ -81,7 +82,8 @@
             is truly a legend among the whitewater rivers of the world. This pure, clear, free-flowing river drops 3,000 feet over 
             its 100 mile course through the remote and spectacular River of No Return Wilderness, the largest Wilderness in the lower 
             48 states.We can create the perfect opportunity to relax in a raft or challenge the whitewater while paddling an inflatable kayak or stand up paddle board. </p> 
-        <p>Begins & Ends: Stanley, Idaho & Salmon, Idaho <br>Season: June-August<br>River Distance: 100 miles<br>Rapids: Class III-V<br>Boat Type: Oar Boat & Paddle Raft<br>Minimum Age: 7-12 (Based on water levels)<p><p class="strong">STARTING AT $1990</p></p>
+        <p>Begins & Ends: Stanley, Idaho & Salmon, Idaho <br>Season: June-August<br>River Distance: 100 miles<br>Rapids: Class III-V<br>Boat Type: Oar Boat & Paddle Raft<br>Minimum Age: 7-12 (Based on water levels)</p>
+        <p class="strong">STARTING AT $1990</p>
             <img src="images/trip2.jpg" alt="Salmon River Trip Middle area">      
         </div>
 
@@ -89,8 +91,9 @@
         <p>Soak up rich scenic wonder and history while splashing toward huge sandy camping beaches. The Lower Salmon River trip explores 
             the final miles of the Salmon River before it joins the mighty Snake River on its way to the Columbia. On this section of river, 
             the trip covers 53 miles on the Salmon River plus another 21 miles on the Snake River.  Experience a fun and exciting day with your friends and family with one of our knowledgeable guides.Enjoy sandy camping beaches backed up to pine forests and mountains.</p> 
-       <p> Begins and Ends: Lewiston, Idaho<br>Season: July-September<br>River Distance: 89 miles<br>Rapids: Class II-III<br>Boat Type: Oar, Paddle, Inflatable Kayak<br>Minimum Age: 5 &10 (Based on water levels)<p><p class="strong">STARTING AT $1495</p></p>
-        <img src="images/trip3.jpg" alt="Salmon River Trip Lower area">  
+       <p> Begins and Ends: Lewiston, Idaho<br>Season: July-September<br>River Distance: 89 miles<br>Rapids: Class II-III<br>Boat Type: Oar, Paddle, Inflatable Kayak<br>Minimum Age: 5 &10 (Based on water levels)</p>
+       <p class="strong">STARTING AT $1495</p> 
+       <img src="images/trip3.jpg" alt="Salmon River Trip Lower area">  
         </div>
 
 </div>    
